--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hielo by TEMPLATED</title>
+		<title>HIELO PARA CUBITOS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,7 +34,7 @@
 					<img src="images/slide01.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p>
+							<p>A free responsive web site teme by <a href="https://templated.co">TEMPLATED</a></p>
 							<h2>Hielo</h2>
 						</header>
 					</div>
@@ -90,7 +90,7 @@
 								<div class="content">
 									<header class="align-center">
 										<p>maecenas sapien feugiat ex purus</p>
-										<h2>Masajes Relajantes</h2>
+										<h2>Lorem ipsum dolor</h2>
 									</header>
 									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
 									<footer class="align-center">
@@ -189,3 +189,4 @@
 
 	</body>
 </html>
+
