--- a/Pruebas.html
+++ b/Pruebas.html
@@ -33,7 +33,7 @@
 				<div class="inner">
 					<header class="align-center">
 						<p>Eleifend vitae urna</p>
-						<h2>Generic Page Template</h2>
+						<h2>Pagina Prueba 4 Cambio Portada</h2>
 					</header>
 				</div>
 			</section>
@@ -45,7 +45,7 @@
 						<div class="content">
 							<header class="align-center">
 								<p>maecenas sapien feugiat ex purus</p>
-								<h2>cambio datos de portada</h2>
+								<h2>cambio datos de PORTADA</h2>
 							</header>
 							<p>Lorem ipsum dssssssssssssssssssssssssssssssssssssssssssssssssssuam. Nunc porta, est non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui vel est tempor faucibus. Aliquam erat volutpat. Quisque vel est vitae nibh laoreet auctor. In nec libero dui. Nulla ullamcorper, dolor nec accumsan viverra, libero eros rutrum metus, vel lacinia magna odio non nunc. Praesent semper felis eu rhoncus aliquam. Donec at quam ac libero vestibulum pretium. Nunc faucibus vel arcu in malesuada. Aenean at velit odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas commodo erat eget molestie sollicitudin. Donec imperdiet, ex sed blandit dictum, ipsum metus ultrices arcu, vitae euismod nisl sapien vitae tortor.</p>
 
